Fix issue with icon aligned in center

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-mini-search.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-mini-search.less
@@ -6,6 +6,7 @@
 
     .icon {
         position: absolute;
+        left: 9px;
         width: 1em;
         height: 1em;
         padding: 0;
@@ -15,9 +16,9 @@
     }
 
     input {
-        width: 0px;
+        width: 0;
         padding-left: 24px;
-        margin-bottom: 0px;
+        margin-bottom: 0;
         background-color: transparent;
         border-color: @ui-action-discreet-border;
         transition: background-color .1s linear, border-color .1s linear, color .1s linear, width .1s ease-in-out, padding-left .1s ease-in-out;
@@ -28,6 +29,7 @@
         .icon {
             color: @ui-action-discreet-type-hover;
         }
+
         input {
             color: @ui-action-discreet-border-hover;
             border-color: @ui-action-discreet-border-hover;
@@ -45,5 +47,4 @@
         width: 190px;
         padding-left:30px;
     }
-
 }
